<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:targetApi="o">

    <item
        android:id="@+id/searchview_menu"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search_here"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView$SearchAutoComplete" />

    <item
        android:id="@+id/favorite_menu"
        android:title="@string/favorite"
        android:icon="@drawable/baseline_favorite_24"
        android:iconTint="#FBFBFB"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/settings_menu"
        android:title="@string/settings"
        android:icon="@drawable/baseline_settings_applications_24"
        android:iconTint="#F8F8F8"
        app:showAsAction="always" />
</menu>